--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "stripe": "^14.15.0",
+    "axios": "^1.6.0",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
