--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 5000",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port 5000"
+    "preview": "vite preview --port 5000",
+    "server": "node server.js"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -16,7 +17,15 @@
     "react-router-dom": "^6.8.1",
     "stripe": "^14.15.0",
     "axios": "^1.6.0",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "xss-clean": "^0.1.4",
+    "@supabase/supabase-js": "^2.39.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
